<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single"

        >
    <item
        android:id="@+id/home"
        android:icon="@drawable/home24"
        android:title="@string/home" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/share"
        android:title="@string/share" />
    <item
        android:id="@+id/fivestar"
        android:icon="@drawable/bookmark"
        android:title="@string/fivestar" />
    <item
        android:id="@+id/bookmark"
        android:icon="@drawable/bookmark"
        android:title="@string/bookmarks" />
    <item
        android:id="@+id/aboutus"
        android:icon="@drawable/aboutus"
        android:title="@string/about_us" />
    <item
        android:id="@+id/contac"
        android:icon="@drawable/contact"
        android:title="@string/contac" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/settings"
        android:title="@string/settings" />

    </group>

    <item android:title="@string/Follow">
       <menu>
        <item
            android:id="@+id/facebook"
            android:icon="@drawable/ic_facebookhhh"
            android:iconTint="@color/bluedeep"
            android:iconTintMode="src_in"
            android:title="@string/facebook" />
        <item
            android:id="@+id/google"
            android:icon="@drawable/google"
            android:title="@string/Google" />
        <item
            android:id="@+id/twitter"
            android:icon="@drawable/twitter"
            android:title="@string/twitter" />
     </menu>
    </item>


</menu>