<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="6"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.5"
            android:orientation="vertical">



            <!--Button 1-->

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:weightSum="3"
                android:clickable="true"
                style="@android:style/Widget.DeviceDefault.Button"
                android:orientation="vertical"
                android:background="@drawable/roundedbuttondeep"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.7"
                    android:textSize="25dp"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:text="@string/button1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.3"
                    android:text="@string/button1sub"
                    android:textSize="13dp"
                    android:textColor="@color/white"
                    android:layout_below="@+id/test_button_text1"
                    android:gravity="center_horizontal"/>

            </LinearLayout>


            <!--Button 2-->

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="3"
                android:layout_margin="2dp"
                android:clickable="true"
                style="@android:style/Widget.DeviceDefault.Button"
                android:orientation="vertical"
                android:background="@drawable/roundbuttonlight"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.7"
                    android:textSize="25dp"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:text="@string/button2"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.3"
                    android:text="@string/button2sub"
                    android:textSize="13dp"
                    android:textColor="@color/white"
                    android:layout_below="@+id/test_button_text1"
                    android:gravity="center_horizontal"/>

            </LinearLayout>


            <!--Button 3-->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="3"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:clickable="true"
                style="@android:style/Widget.DeviceDefault.Button"
                android:orientation="vertical"
                android:background="@drawable/roundedbuttondeep"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.7"
                    android:textSize="25dp"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:text="@string/button3"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.3"
                    android:text="@string/button3sub"
                    android:textSize="13dp"
                    android:textColor="@color/white"
                    android:layout_below="@+id/test_button_text1"
                    android:gravity="center_horizontal"/>

            </LinearLayout>


            <!--Button 4-->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="3"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:clickable="true"
                style="@android:style/Widget.DeviceDefault.Button"
                android:orientation="vertical"
                android:background="@drawable/roundbuttonlight"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.7"
                    android:textSize="25dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:text="@string/button4"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.3"
                    android:text="@string/button4sub"
                    android:textColor="@color/white"
                    android:textSize="13dp"
                    android:layout_below="@+id/test_button_text1"
                    android:gravity="center_horizontal"/>

            </LinearLayout>

            <!--Button 5-->
            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textSize="25dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:textColor="@color/white"
                android:background="@drawable/roundedbuttondeep"
                android:text="@string/button5"
                android:textAlignment="center"
                />
            <!--Button 6-->
            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:background="@drawable/roundbuttonlight"
                android:text="@string/button6"
                android:textAlignment="center"
                />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.5"
            >

        </LinearLayout>


    </LinearLayout>


</LinearLayout>