<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".About_us">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"

        app:srcCompat="@drawable/aboutlogo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="22dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/bluelight"
        android:text="About Us"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">
    <LinearLayout
        android:layout_weight="1.8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="10dp"
        android:background="@color/bluelight"
        android:orientation="horizontal"
        android:weightSum="2">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView

                android:layout_gravity="center"
                android:layout_width="95dp"
                android:layout_height="95dp"
                app:srcCompat="@drawable/andreas" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desginer"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:text="@string/occ"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="95dp"
                android:layout_height="95dp"
                app:srcCompat="@drawable/micha" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:text="@string/developer"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:text="@string/occ2"/>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.2"
        android:background="@color/bluelight"
        android:orientation="vertical">
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ag" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/help"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/helpName"/>
        <View
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/white" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>